# HUTH-Bed_allocation

./: .gitignore  LICENSE  README.md  hri_admission_.xlsx  setup.cfg  setup.py
app/: run.py
app/app/: __init__.py  app.py  index.py  pag.py  page.py
app/app/Dami/: __init__.py  app.py  multi_tab.py  pag.py  page.py
app/app/components/: forecast.py  patient_details.py  suggested_moves.py  virtual_hospital.py
app/app/dynamic/: index.py
app/app/static/html/: index.html
notebooks/: 1.Virtual_Hospital_Environment.ipynb  2.Greedy_Allocation.ipynb  3.MCTS_Allocation.ipynb  4.Time_Series_Forecast.ipynb
src/data_preparation/: create_json_files.py
src/forecasting/: __init__.py
