[metadata]
name = bed allocation
description = Optimization for Bed Allocation within hospitals
long_description = file: README.md
long_description_content_type = text/markdown
url = https://faculty.ai/
author = Faculty
author_email = info@faculty.ai
license = MIT
license_file = LICENCE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    anytree==2.8.0
    cloudpickle==2.0.0
    dash==2.4.1
    dash-bootstrap-components==1.0.0b1
    faculty==0.28.0
    flask==2.1.2
    ipywidgets
    jax[cpu]==0.2.24
    jupyter-latex-envs
    matplotlib==3.3.4
    numpy==1.22.3
    numpyro==0.8.0
    pandas==1.4.2
    scipy==1.8.0
    tensorflow-probability==0.14.1
    tqdm
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
linting =
    black==21.5b1
    flake8==3.8.4
    isort==5.9.2
testing =
    pytest
    pytest-cov

[tool:pytest]
addopts =
    --cov bed-allocation --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[tool.setuptools_scm]
version_scheme = guess-next-dev

[bdist_wheel]
universal = 1

[flake8]
ignore = E203 W503 W291 W293
max-line-length = 79
exclude =
    .tox
    dist
    .eggs
